--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,10 @@ canvas {
   left:0;
   z-index: -1;
 }
+
+.logo{
+  max-width:10%;
+}
 .text-box {
   font-size: 60px;
   font-family: 'Raleway', sans-serif;
